--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     </div>
 
-  <script src="D:\Web Development\DOM\DICE Game\index.js" charset="utf-8"></script>
+  <script src="https://github.com/McCartney2003/Basic-Dice-Game/blob/main/index.js" charset="utf-8"></script>
   </body>
 
   <footer>
