--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       </div>
 
     </div>
+    
+    <p>"Made by Yogendra 😎🤝" </p>
 
   <script src="index.js" charset="utf-8"></script>
   </body>
