--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 
     </div>
     
+    <div>
     <p>"Made by Yogendra 😎🤝" </p>
-
+    </div>
+      
   <script src="index.js" charset="utf-8"></script>
   </body>
 </html>
